# rotors_mpc_controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  params.py  setup.py
cfg/: rotors_mpc.cfg
cfg/docs/: rotors_mpc_math.tex
config/: control.perspective  params.yaml  rotors_mpc.rviz
launch/: hummingbird_mpc.launch
nodes/: low_level_controller_node  mpc_controller_node  path_publisher_node
resource/: mpc_control_plugin.xml
src/rotors_mpc_controller/: __init__.py  controller.py  low_level.py  params.py  reference.py  rqt_mpc_panel.py  trajectory.py
src/test/: waypoints.py
