<?xml version="1.0"?>
<package format="2">
  <name>rotors_mpc_controller</name>
  <version>0.0.0</version>
  <description>MPC controller scaffold for RotorS-compatible UAVs</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend>

  <export>
    <rqt_gui plugin="${prefix}/resource/mpc_control_plugin.xml"/>
  </export>
</package>
